# build-webos

./: .gitignore  .gitmodules  Makefile.in  NOTICE  README.md  configure  configure.ac  mcf  weboslayers.py
build-templates/: Makefile.in  bblayers-conf.in  bitbake-rc.in  local-conf.in  mcf-status.in  webosadditionallayers.py
scripts/: prerequisites.sh  tag_oe.sh  webosbaselayers.py
